--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.html.twig
@@ -32,7 +32,14 @@
                         />
                         {% endblock %}
                         {% block sw_settings_payment_sorting_modal_content_payment_method_icon %}
+                        <img
+                            v-if="isShopwareDefaultPaymentMethod(paymentMethod)"
+                            class="sw-settings-payment-sorting-modal__payment-method-list-item__icon"
+                            :src="'/administration/static/img/checkout/shopware_payment_method.svg' | asset"
+                            alt=""
+                        >
                         <sw-media-preview-v2
+                            v-else
                             class="sw-settings-payment-sorting-modal__payment-method-list-item__icon"
                             :source="paymentMethod.media ? paymentMethod.media : null"
                         />
