--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.scss
@@ -13,10 +13,11 @@
 
     &-item {
         display: grid;
-        padding: 8px 24px 8px 12px;
-        grid-template-columns: 16px 32px auto;
+        padding: 12px 24px 12px 12px;
+        grid-template-columns: 16px 34px auto;
         grid-column-gap: 8px;
         border: 1px solid $color-gray-300;
+        border-radius: 4px;
         align-items: center;
 
         &__name {
@@ -26,20 +27,36 @@
 
         &__icon {
             position: relative;
-            height: 100%;
-
-            > img {
-                width: 34px;
-                height: 24px;
-            }
+            width: 34px;
+            height: 24px;
         }
 
-        &.is--drag-element {
-            background-color: $color-white;
+        .sw-media-preview-v2.is--icon .sw-media-preview-v2__item {
+            transform: translate(-50%, -50%) scale(1);
         }
     }
 
     &.sw-sortable-list__empty-state {
         position: relative;
+    }
+}
+
+.sw-sortable-list__item {
+    &.is--dragging {
+        border-radius: 4px;
+
+        > .sw-settings-payment-sorting-modal__payment-method-list-item {
+            padding: 11px 24px 11px 12px;
+        }
+    }
+
+    &.is--drag-element {
+        background-color: $color-white;
+        border-radius: 4px;
+
+        &,
+        &.is--valid-drag {
+            box-shadow: 0 1px 3px 0 $color-gray-300;
+        }
     }
 }
