NEXT-20544 - Fix unmounting of toolbar in `sw-text-editor`

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
@@ -21,6 +21,7 @@
         {% block sw_text_editor_box_toolbar %}
         <sw-text-editor-toolbar
             v-if="hasSelection || !isInlineEdit"
+            ref="text-editor-toolbar"
             :parent-is-active="isActive"
             :is-inline-edit="isInlineEdit"
             :selection="selection"
