NEXT-22049 - set shipping fee to 0.00 if this product.shippingFree is true. fixes #2534

--- a/src/Administration/Resources/app/administration/src/module/sw-sales-channel/product-export-templates/google-product-search-de/body.xml.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-sales-channel/product-export-templates/google-product-search-de/body.xml.twig
@@ -30,6 +30,10 @@
     <g:shipping>
         <g:country>DE</g:country>
         <g:service>Standard</g:service>
+        {% if product.shippingFree  %}
+        <g:price>0.00 {{ context.currency.isoCode }}</g:price>
+        {% else %}
         <g:price>4.95 {{ context.currency.isoCode }}{# change your default delivery costs #}</g:price>
+        {% endif %}
     </g:shipping>
 </item>
