NEXT-21813 - Fix custom fields listing

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-custom-field/page/sw-settings-custom-field-set-list/sw-settings-custom-field-set-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-custom-field/page/sw-settings-custom-field-set-list/sw-settings-custom-field-set-list.html.twig
@@ -25,7 +25,7 @@
                 v-if="!isLoading"
                 class="sw-page__smart-bar-amount"
             >
-                ({{ items.length }})
+                ({{ total }})
             </span>
         </h2>
     </template>
