NEXT-17325 - implement legacy space mapping for icon-library icons

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-price-field/sw-price-field.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-price-field/sw-price-field.scss
@@ -27,6 +27,11 @@ $sw-price-field-suffix-font-weight: 400;
             color: $color-gray-700;
             cursor: default;
         }
+
+        .sw-icon {
+            // @deprecated tag:v6.5.0 - The !important attribute can be removed
+            padding: 0 3px !important;
+        }
     }
 
     .sw-field {
