--- a/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-block/sw-cms-block-config/sw-cms-block-config.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-block/sw-cms-block-config/sw-cms-block-config.html.twig
@@ -13,7 +13,7 @@
             @click="onBlockDuplicate"
         >
             <sw-icon
-                name="regular-clone"
+                name="regular-duplicate"
                 size="16"
             />
             {{ $tc('sw-cms.sidebar.contentMenu.duplicate') }}
