--- a/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-sidebar/sw-cms-sidebar-nav-element/sw-cms-sidebar-nav-element.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/component/sw-cms-sidebar/sw-cms-sidebar-nav-element/sw-cms-sidebar-nav-element.html.twig
@@ -15,7 +15,7 @@
         @click="onBlockDuplicate"
     >
         <sw-icon
-            name="regular-clone"
+            name="regular-duplicate"
             size="16"
         />
     </div>
