--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-help-text/sw-help-text.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-help-text/sw-help-text.html.twig
@@ -10,7 +10,10 @@
     class="sw-help-text"
 >
     {% block sw_help_text_icon %}
-    <sw-icon name="regular-questionmark-s" />
+    <sw-icon
+        name="regular-questionmark-s"
+        size="14px"
+    />
     {% endblock %}
 </span>
 {% endblock %}
