--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-help-text/sw-help-text.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-help-text/sw-help-text.scss
@@ -15,5 +15,8 @@
     .sw-icon {
         width: 14px;
         height: 14px;
+
+        // @deprecated tag:v6.5.0 - The !important attribute can be removed
+        padding: 3px 4px !important;
     }
 }
