--- a/src/Administration/Resources/app/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.scss
@@ -28,4 +28,11 @@
             }
         }
     }
+
+    .sw-product-detail__button-context-menu {
+        .sw-icon {
+            // @deprecated tag:v6.5.0 - The !important attribute can be removed
+            padding: 4px 3px !important;
+        }
+    }
 }
