NEXT-22027 - Fix missing translation and typo

--- a/src/Administration/Resources/app/administration/src/module/sw-import-export/view/sw-import-export-view-profiles/sw-import-export-view-profiles.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-import-export/view/sw-import-export-view-profiles/sw-import-export-view-profiles.html.twig
@@ -2,7 +2,7 @@
 <div class="sw-import-export-view-profiles">
     {% block sw_import_export_view_profile_profiles %}
     <sw-card
-        title="Profiles"
+        :title="$tc('sw-import-export.page.profileTab')"
         class="sw-import-export-view-profiles__grid-card"
         position-identifier="sw-import-export-view-profiles"
     >
