NEXT-21953 - Fix capitalisation

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-leave-page-modal/sw-flow-leave-page-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/modals/sw-flow-leave-page-modal/sw-flow-leave-page-modal.html.twig
@@ -17,7 +17,7 @@
             class="sw-flow-leave-page-modal__stay-on-page"
             @click="onCancel"
         >
-            {{ $tc('sw-flow.leavePageModal.cancelButton') }}
+            {{ $tc('global.default.cancel') }}
         </sw-button>
         {% endblock %}
 
