--- a/src/Administration/Resources/app/administration/src/app/component/form/select/entity/sw-entity-multi-select/sw-entity-multi-select.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/select/entity/sw-entity-multi-select/sw-entity-multi-select.html.twig
@@ -17,6 +17,7 @@
             v-if="isAdvancedSelectionActive && isAdvancedSelectionModalVisible"
             :initial-search-term="searchTerm"
             :initial-selection="currentCollection"
+            v-bind="advancedSelectionParameters"
             @modal-close="closeAdvancedSelectionModal"
             @selection-submit="onAdvancedSelectionSubmit"
         />
