--- a/src/Administration/Resources/app/administration/src/app/component/form/select/entity/sw-entity-single-select/sw-entity-single-select.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/select/entity/sw-entity-single-select/sw-entity-single-select.html.twig
@@ -19,6 +19,7 @@
             v-if="isAdvancedSelectionActive && isAdvancedSelectionModalVisible"
             :is-single-select="true"
             :initial-search-term="advancedSelectionInitialSearchTerm"
+            v-bind="advancedSelectionParameters"
             @modal-close="closeAdvancedSelectionModal"
             @selection-submit="onAdvancedSelectionSubmit"
         />
