--- a/src/Administration/Resources/app/administration/src/module/sw-promotion-v2/component/sw-promotion-v2-rule-select/sw-promotion-v2-rule-select.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-promotion-v2/component/sw-promotion-v2-rule-select/sw-promotion-v2-rule-select.html.twig
@@ -8,6 +8,8 @@
         class="sw-promotion-v2-rule-select"
         :entity-collection="collection"
         :local-mode="localMode"
+        advanced-selection-component="sw-advanced-selection-rule"
+        :advanced-selection-parameters="advanceSelectionParameters"
         v-on="$listeners"
         @change="onChange"
     >
