--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-select-rule-create/sw-select-rule-create.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-select-rule-create/sw-select-rule-create.html.twig
@@ -5,6 +5,8 @@
         v-model="collection"
         :criteria="ruleFilter"
         v-bind="$attrs"
+        advanced-selection-component="sw-advanced-selection-rule"
+        :advanced-selection-parameters="getAdvancedSelectionParameters()"
     >
 
         <template #before-item-list>
@@ -63,6 +65,8 @@
         :value="ruleId"
         v-bind="$attrs"
         show-clearable-button
+        advanced-selection-component="sw-advanced-selection-rule"
+        :advanced-selection-parameters="getAdvancedSelectionParameters()"
         @change="onSelectRule"
     >
         <template #before-item-list>
