--- a/src/Administration/Resources/app/administration/src/app/component/structure/sw-page/sw-page.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/structure/sw-page/sw-page.scss
@@ -76,6 +76,11 @@ $sw-page-search-bar-z-index: $z-index-sw-page-search-bar;
             line-height: 24px;
             margin: auto;
         }
+
+        .sw-icon.icon--regular-chevron-left {
+            // @deprecated tag:v6.5.0 - padding can be removed
+            padding: 0 !important;
+        }
     }
 
     .smart-bar__content {
