--- a/src/Storefront/Resources/views/storefront/layout/navigation/offcanvas/active-item-link.html.twig
+++ b/src/Storefront/Resources/views/storefront/layout/navigation/offcanvas/active-item-link.html.twig
@@ -1,3 +1,5 @@
+{% set treeItem = item %}
+
 {% block layout_navigation_offcanvas_navigation_category_headline %}
     <a class="nav-item nav-link navigation-offcanvas-headline"
        href="{{ category_url(treeItem) }}"
