--- a/src/Storefront/Resources/views/storefront/layout/navigation/offcanvas/back-link.html.twig
+++ b/src/Storefront/Resources/views/storefront/layout/navigation/offcanvas/back-link.html.twig
@@ -1,3 +1,4 @@
+{% set treeItem = item %}
 {% if treeItem.parentId == context.salesChannel.navigationCategoryId %}
     {% set url = path('frontend.menu.offcanvas') %}
 {% else %}
