--- a/src/Storefront/Resources/views/storefront/layout/navigation/offcanvas/item-link.html.twig
+++ b/src/Storefront/Resources/views/storefront/layout/navigation/offcanvas/item-link.html.twig
@@ -1,3 +1,4 @@
+{% set treeItem = item %}
 {% set isActive = treeItem.category.id == activeId %}
 {% set hasChildren = treeItem.category.visibleChildCount > 0 %}
 {% set url = category_url(treeItem.category) %}
