--- a/src/Storefront/Resources/views/storefront/layout/navigation/offcanvas/show-active-link.html.twig
+++ b/src/Storefront/Resources/views/storefront/layout/navigation/offcanvas/show-active-link.html.twig
@@ -1,3 +1,5 @@
+{% set treeItem = item %}
+
 {% set name = treeItem.translated.name %}
 <li class="navigation-offcanvas-list-item">
     {% block layout_navigation_offcanvas_navigation_categories_list_current_category_item_link %}
