--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-dynamic-url-field/sw-dynamic-url-field.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-dynamic-url-field/sw-dynamic-url-field.html.twig
@@ -61,7 +61,9 @@
         <sw-entity-single-select
             v-else-if="linkCategory === 'detail'"
             v-model="linkTarget"
+            class="sw-dynamic-url-field__entity-single-select"
             should-show-active-state
+            display-variants
             entity="product"
             :criteria="entityFilter"
             :label="$tc('sw-text-editor-toolbar.link.linkTo')"
