--- a/src/Administration/Resources/app/administration/src/module/sw-settings-custom-field/component/sw-custom-field-detail/sw-custom-field-detail.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-custom-field/component/sw-custom-field-detail/sw-custom-field-detail.scss
@@ -11,4 +11,8 @@
         grid-column: span 2;
         margin-bottom: 24px;
     }
+
+    .sw-custom-field-detail__allow-customer-write {
+        margin: 0;
+    }
 }
