NEXT-18825 - Fix feature branch issues

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-payment-card/sw-payment-card.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-payment-card/sw-payment-card.html.twig
@@ -24,6 +24,7 @@
         <sw-internal-link
             v-if="acl.can('payment.editor')"
             :router-link="{ name: 'sw.settings.payment.detail', params: { id: paymentMethod.id }}"
+            hide-icon
         >
             {{ $tc('sw-settings-payment.overview.editDetails') }}
         </sw-internal-link>
