--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/page/sw-settings-payment-overview/sw-settings-payment-overview.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/page/sw-settings-payment-overview/sw-settings-payment-overview.html.twig
@@ -51,7 +51,7 @@
             {% block sw_settings_payment_overview_deprecation_alert %}
             <sw-alert
                 class="sw-settings-payment-overview__deprecation-alert"
-                icon="default-object-party-horn"
+                icon="regular-party-horn"
                 :title="$tc('sw-settings-payment.overview.deprecation-alert.title')"
             >
                 {{ $tc('sw-settings-payment.overview.deprecation-alert.message') }}
