NEXT-22384 - Fix missing saleschannel icon

--- a/src/Administration/Resources/app/administration/src/module/sw-sales-channel/component/structure/sw-sales-channel-menu/sw-sales-channel-menu.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-sales-channel/component/structure/sw-sales-channel-menu/sw-sales-channel-menu.html.twig
@@ -20,7 +20,7 @@
         {% block sw_sales_channel_menu_headline_context_button %}
         <sw-context-button
             class="sw-admin-menu__headline-context-menu"
-            icon="regular-ellipsis-v"
+            icon="solid-ellipsis-h"
         >
             {% block sw_sales_channel_menu_headline_context_button_item %}
             <sw-context-menu-item
