--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.html.twig
@@ -23,11 +23,13 @@
             >
                 {% block sw_settings_payment_sorting_modal_content_payment_method %}
                 <template #item="{ item: paymentMethod }">
-                    <div class="sw-settings-payment-sorting-modal__payment-method-list-item">
+                    <div
+                        class="sw-settings-payment-sorting-modal__payment-method-list-item"
+                        :class="!paymentMethod.active ? 'is--disabled' : ''"
+                    >
                         {% block sw_settings_payment_sorting_modal_content_payment_method_action %}
                         <sw-icon
                             class="sw-settings-payment-sorting-modal__payment-method-list-item__action"
-                            small
                             name="default-action-drag-horizontal"
                         />
                         {% endblock %}
