--- a/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-payment/component/sw-settings-payment-sorting-modal/sw-settings-payment-sorting-modal.scss
@@ -20,6 +20,11 @@
         border-radius: 4px;
         align-items: center;
 
+        &.is--disabled {
+            color: $color-gray-500;
+            background-color: $color-gray-100;
+        }
+
         &__name {
             font-weight: $font-weight-semi-bold;
             font-size: $font-size-small;
