NEXT-22233 - Add modal block allow plugin able to extensions

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/page/sw-flow-detail/sw-flow-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/page/sw-flow-detail/sw-flow-detail.html.twig
@@ -78,6 +78,8 @@
             />
             {% endblock %}
         </sw-card-view>
+
+        {% block sw_flow_detail_modal_extension %}{% endblock %}
     </template>
     {% endblock %}
 </sw-page>
